Added logout button

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <div>
       <label for="password">Password:</label>
       <input id="password" type="password" name="password">
-    </div>
+    </div
     <div>
       <input type="submit" value="Login">
     </div>
